update the names
Merge it quickly

--- a/src/components/Landing/parallax.css
+++ b/src/components/Landing/parallax.css
@@ -100,7 +100,7 @@
 }
 
 .animated-gradient-bg-3::before {
-  content: "Bro";
+  content: "Champs";
   color: black;
   position: absolute;
   top: 0;
